--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.4",
     "@heroicons/vue": "^2.0.13",
+    "axios": "^1.1.3",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6"
   },
